--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "singleAttributePerLine": false,
     "htmlWhitespaceSensitivity": "css",
@@ -7,13 +7,14 @@
     "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
     "tailwindFunctions": ["clsx", "cn", "cva"],
     "tailwindStylesheet": "resources/css/app.css",
-    "tabWidth": 2,
+    "tabWidth": 4,
+    "trailingComma": "es5",
     "vueIndentScriptAndStyle": true,
     "overrides": [
         {
             "files": "**/*.yml",
             "options": {
-                "tabWidth": 2
+                "tabWidth": 4
             }
         }
     ]
